appId: com.duckduckgo.mobile.ios
---

- scrollUntilVisible:
    element: Sync & Backup
- tapOn: Sync & Backup
- scroll
- assertVisible: Unify Favorites Across Devices
- runFlow: # TODO: Remove this! This was added to validate an hypothesis about some flacky tests. If this test doesn't fail anymore, we need to investigate why the toggle is already enabled when the test starts.
    when:
      visible: # Check that UnifiedFavoritesToggle is off
        text: "0" 
        index: 1 
    commands:
        - tapOn:
            text: "0"
            index: 1
- tapOn: Settings
- tapOn: Done

# Validate the favorites are now visible on the new tab to prove they have been sync'd - we can't assume that's where we are just now though so navigate there first.
- assertVisible: Tab Switcher
- tapOn: Tab Switcher
- assertVisible: "New Tab"
- tapOn: "New Tab"
- assertVisible: NFL.com | Official Site of the National Football League
- assertVisible: DuckDuckGo · GitHub
- assertVisible: Stack Overflow - Where Developers Learn, Share, & Build Careers
